--- a/store.html
+++ b/store.html
@@ -2191,7 +2191,7 @@
           </div>
         </div>
     </div>
-
+    
     <!-- body thanh toan current -->
     <div id="body-thanhtoan-current">
         <div class="wrapper-body-thanhtoan-current">
@@ -2421,9 +2421,9 @@
                   <p>maserati12042004@gmail.com</p>
                 </div>
               </div>
+                        </div>
+                    </div>
         </div>
-            </div>
-      </div>
     </div>
 
     <!-- body thanh toan -->
@@ -2665,11 +2665,27 @@
 
 <script src="storeONCLICK.js"></script>
 
-<!-- <script src="./store.js"></script>
-<script type="text/javascript" src="./models.js"></script>
-<script type="text/javascript" src="./cars.js"></script>
-<script type="text/javascript" src="./filter.js"></script>
-<script type="text/javascript" src="./Ghim.js"></script>
-<script type="text/javascript" src="./cart.js"></script>
-<script type="text/javascript" src="./moreInformation.js"></script> -->
+<!-- <script src="homeUserCars.js"></script>
+<script src="homeUserCart.js"></script>
+<script src="homeUserCart2.js"></script>
+<script src="homeUserDaDat.js"></script>
+<script src="homeUserDaMua.js"></script>
+<script src="homeUserFilter.js"></script>
+<script src="homeUserGhim.js"></script>
+<script src="homeUserGhim2.js"></script>
+<script src="homeUserGhimXoa.js"></script>
+<script src="homeUserHome.js"></script>
+<script src="homeUserInformation.js"></script>
+<script src="homeUserInformation2.js"></script>
+<script src="homeUserLogin.js"></script>
+<script src="homeUserModel.js"></script>
+<script src="homeUserMoreInformation.js"></script>
+<script src="homeUserOnclick.js"></script>
+<script src="homeUserPropose.js"></script>
+<script src="homeUserRegister.js"></script>
+<script src="homeUserReloadQuantity.js"></script>
+<script src="homeUserThanhToanCurrent.js"></script>
+<script src="homeUserThanhToanForm.js"></script>
+<script src="homeUserThanhToanFormCurrent.js"></script>
+<script src="homeUserThanhToanHoaDon.js"></script> -->
 </html>
